# if-then-alarm

./: .gitignore  AGENTS.md  MEMORY.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: ACCEPTANCE_CHECKLIST.md  APP_VISUAL_STYLE_GUIDE.md  ASSET_PIPELINE.md  COMPACT_WINDOW_SPEC.md  DESKTOP_BEHAVIOR_REGRESSION.md  DESKTOP_PERSISTENCE_JSON_SPEC.md  DEVELOPMENT_PLAN.md  FUTURE_VISUAL_SPEC.md  INTERACTION_MODEL.md  MACOS_INTERNAL_BUILD.md  MACOS_SELF_USE_INSTALL.md  MVP_SCOPE.md  OPEN_SOURCE_STRATEGY.md  PERSISTENCE_MIGRATION_PLAN.md  PLATFORM_BOUNDARY_AUDIT.md  SELF_USE_READINESS.md  SELF_USE_REGRESSION_RUNBOOK.md  SELF_USE_RELEASE_LOG.md  SOUND_REMINDER_SPEC.md  STATE_MACHINE.md  TAURI_CLOSE_RESTORE_NOTES.md  TAURI_DESKTOP_CHECKLIST.md  TAURI_MIGRATION_PLAN.md  VISUAL_ASSET_BOUNDARIES.md  VISUAL_ASSET_REPLACEMENT_CHECKLIST.md  VISUAL_COMPONENT_CONTRACTS.md
scripts/: check-compact-window.mjs  check-desktop-config.mjs  check-release-self-use.mjs  check-self-use-readiness.mjs  check-sound-assets.mjs  check-tauri-persistence-recovery.mjs  check-tauri-window-roundtrip.mjs  check-visual-assets.mjs  extract-stage-censer-layers.mjs  generate-sound-reminder-assets.mjs  generate-stage-incense-assets.mjs  print-self-use-release-summary.mjs  start-tauri-frontend.mjs  (+1 more)
src/: App.tsx  main.tsx  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/icons/app-icon/: README.md
src-tauri/icons/menubar-icon/: README.md
src-tauri/icons/notification-icon/: README.md
src-tauri/src/: main.rs
(+73 files in other folders)
