[package]
name = "jiji-rululing"
version = "0.1.0"
description = "A ritual-focused intent and pomodoro desktop tool."
authors = ["Damon"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2.3.3"
